# stock_asking_system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  backtest_runner.py  pyproject.toml  run.py  test_interactive_editor.py  uv.toml
.github/workflows/: ci-cd.yml
.stock_asking/hooks/: lint-check.py  no-secrets.py  quality-gate.py  test-gate.py  tool-call-validator.py  validate-confidence-weights.py  validate-strategy.py  validate-thresholds.py
.stock_asking/rules/: data-quality.md  expression-design.md  risk-control.md  tool-value-ranges.md
.stock_asking/skills/quality-assessment/: SKILL.md
.stock_asking/skills/quality-criteria/: SKILL.md
.stock_asking/skills/stock-screening/: SKILL.md
.stock_asking/skills/strategy-patterns/: SKILL.md
app/: __init__.py  backtest.py  screener.py
app/screening_scripts/均线多头/: 均线多头_20260414_232743.py
app/screening_scripts/放量突破/: 放量突破_20260413_235007.py  放量突破_20260414_002658.py  放量突破_20260414_232700.py
app/screening_scripts/跑赢大盘/: 跑赢大盘_20260420_001123.py  跑赢大盘_20260420_013121.py  跑赢大盘_20260420_165538.py  跑赢大盘_20260422_211719.py  跑赢大盘_20260422_225228.py  跑赢大盘_20260422_230038.py  跑赢大盘_20260422_231039.py  跑赢大盘_20260422_231736.py
app/screening_scripts/高波动持续跑赢大盘/: 高波动持续跑赢大盘_20260510_135513.py
app/screening_scripts/高波动持续跑赢大盘+均线发散/: 高波动持续跑赢大盘+均线发散_20260510_233655.py
app/screening_scripts/高波动持续跑赢大盘_严格版/: 高波动持续跑赢大盘_严格版_20260510_144756.py
app/setting/: backtest.yaml  screening.yaml  screening_interactive.yaml  settings.yaml  settings_advanced.yaml  stock_pool.yaml
app/setting/rules/: reflection.md
backtest/: __init__.py  backtest.py  report_display.py  returns.py
config/: __init__.py  api_config.py  backtest_config.py  data_config.py  screener_deepagent_config.py  screener_deepagent_prompts.py  strategy_des.py
datahub/: __init__.py  __main__.py  calendar_utils.py  data_fields.py  data_loader.py  entries.py  factory.py  protocols.py
datahub/cli/: __init__.py  args.py  handlers.py
datahub/core/: __init__.py  dataset.py  exceptions.py  query.py  repository.py  source.py
datahub/domain/: __init__.py  _helpers.py  calendar.py  feature.py  fund.py  index.py  news.py  stock.py
datahub/loaders/: __init__.py  base.py  factor_loader.py  stock_loader.py
datahub/registry/: __init__.py  config_loader.py  fund.py  index.py  news.py  stock.py  stock_datasets.yaml
datahub/service/: __init__.py  data_service.py
datahub/source/: __init__.py  tushare_source.py
datahub/store/: __init__.py  parquet_store.py
datahub/sync/: __init__.py  cache_manager.py  incremental_sync.py  pipeline_executor.py  range_loader.py  sync_repo.py
docs/: ARCHITECTURE.md  INTERACTIVE_SYSTEM.md  MEMORY_SYSTEM.md  OBSERVABILITY_GUIDE.md  README.md  UPDATE_LOG.md  agent_system.md  backtest_engine.md  datahub.md  infrastructure.md  mcp_server.md  screening_engine.md
infrastructure/: __init__.py
infrastructure/cache/: __init__.py  cache_layer.py
infrastructure/config/: __init__.py  settings.py
infrastructure/errors/: __init__.py  error_handler.py  exceptions.py
infrastructure/logging/: __init__.py  logger.py
infrastructure/mcp/: __init__.py
infrastructure/monitoring/: __init__.py  health_check.py
infrastructure/paths/: path_manager.py
infrastructure/retry/: __init__.py  manager.py
infrastructure/session/: __init__.py  exporter.py  manager.py  models.py  storage.py
infrastructure/telemetry/: __init__.py  monitor.py
mcp_server/: __init__.py  auto_register.py  pyproject.toml  registered_tools.py  server.py
mcp_server/executors/: __init__.py  auto_validator.py  feature_tools.py  index_selector.py  index_tools.py  math_tools.py  other_tools.py  risk_tools.py  statistical_tools.py  technical_tools.py  time_series_tools.py  validators.py
mcp_server/expression/: evaluator.py  namespace.py  security.py
screener_deepagent/: __init__.py  agent_factory.py  llm.py
screener_deepagent/context/: __init__.py
screener_deepagent/generators/: __init__.py  screening_script_generator.py
screener_deepagent/skills/intent-patterns/: SKILL.md
screener_deepagent/skills/quality-criteria/: SKILL.md
screener_deepagent/skills/screening-patterns/: SKILL.md
screener_deepagent/skills/stock-screening/: SKILL.md
screener_deepagent/tools/: __init__.py  bridge.py  provider.py
screener_mcp/: __init__.py  auto_register.py  expression_tools.py  pyproject.toml  registered_tools.py  server.py  tool_implementations.py
screening_scripts/放量上涨策略/: 放量上涨策略_20260401_113604.py
screening_scripts/放量突破策略/: 放量突破策略_20260331_165317.py
scripts/: clean_duplicate_imports.py  clean_indented_imports.py
src/: __init__.py
src/agent/: __init__.py  config.py  telemetry.py
src/backtest/: __init__.py  engine.py  report.py  returns.py  utils.py
src/screening/: __init__.py  batch_calculator.py  executor.py  expression_evaluator.py  industry_matcher.py  mcp_tool_runner.py  namespace_builder.py  prefilter.py  result_display.py  script_saver.py  stock_pool_filter.py  tool_implementations.py
tests/: __init__.py  test_memory_system.py
tests/datahub/: __init__.py  run_tests.py  test_core.py  test_domain.py  test_integration.py  test_loaders.py
tests/infrastructure/: __init__.py  test_config.py  test_exceptions.py  test_logging.py
tests/mcp_server/: __init__.py  run_tests.py  test_executors.py  test_expression_security.py  test_index_correlation_tools.py  test_index_tools.py  test_mcp_core.py  test_utils_mcp.py
tests/src/: README.md  __init__.py  run_tests.py
utils/: __init__.py  base_messages.py  check.py  datetime_utils.py  exceptions.py  fs.py  index_utils.py  logger.py  logging_utils.py  path_manager.py  polars_tools.py  prompt_manager.py  screening_tools.py  stock_screener.py
utils/agent/: __init__.py  llm_helper.py  permissions.py  prompts.py  result_checker.py
utils/mcp/: __init__.py  expression_evaluator.py  expression_parser.py  namespace_builder.py  security_validator.py
utils/screening/: __init__.py  interactive_helpers.py  screener_factory.py  screening_tools.py  stock_screener.py  strategy_helpers.py
(+80 files in other folders)
