[project]
name = "screener-mcp"
version = "0.1.0"
description = "Screener factor tools MCP server (standalone, no dependency on quantitative-system)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
screener-mcp-server = "screener_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["screener_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
